Stop firefox from collapsing editable quick chat lines

--- a/src/views/Game/Game.styl
+++ b/src/views/Game/Game.styl
@@ -530,8 +530,12 @@ goban-view-bar-width=400px
     }
 }
 
-
-
+.chat-container {
+    /* Prevent silly Firefox from collapsing empty editable lines */
+    .qc-option[contenteditable=true]{
+        min-height: 1 em;
+    }
+}
 
 .ad.large-rectangle,
 .ad.medium-rectangle,
